# LMX2594-Tools

./: .gitignore  README.md  build.py  requirements.txt
calibration/tinysa/: tinysa_cal_20260208_003111.json
docs/: LMX2594.md  packing-guide.md
outputs/test_data/: benchmark_Example_20260330_143022.txt
scripts/: README.md  frequency_generator.py  lmx2594.py  lmx2594_calibration.py  lmx2594_calibration_gui.py  lmx2594_worker.py  msys2_utils.py  requirements.txt  tinysa_antenna_test.py  usb2anyapi.py
scripts/gui/: __init__.py  __main__.py  main_window.py  plots.py  sidebar.py  styles.py  table_utils.py
scripts/gui/dialogs/: __init__.py  calibration_wizard.py  librevna_calibration_dialog.py
scripts/gui/tabs/: __init__.py  gain_measure_tab.py  librevna_tab.py  lmx_monitor_tab.py  logs_tab.py  tinysa_tab.py
scripts/outputs/test_data/: benchmark_Antenna_001_20260330_220139.txt
scripts/vna/: BUILD_CPP.md  README.md  cli.py  requirements.txt
scripts/vna/calibration/: SOLT_12_1_00M-6_00G_500pt.cal  calibrate.cal
scripts/vna/cpp/: CMakeLists.txt  GUI_TECHNICAL.md  GUI_USER_MANUAL.md  README.md  build.ps1
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Calibration/: calibration.cpp  calibration.h
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Device/LibreVNA/: librevnadriver.cpp  librevnausbdriver.cpp  librevnausbdriver.h
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Device/SSA3000X/: ssa3000xdriver.h
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Traces/: trace.cpp
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Traces/Math/: expression.cpp
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Traces/Math/parser/: mpDefines.h  mpParserBase.cpp  mpTest.cpp  mpTokenReader.cpp
scripts/vna/cpp/LibreVNA-GUI_Source/LibreVNA-GUI/Util/: usbinbuffer.cpp  usbinbuffer.h
scripts/vna/cpp/include/librevna_headless/: calibration.hpp  device_discovery.hpp  device_ids.hpp  host_core.hpp
scripts/vna/cpp/src/: calibration.cpp  cli_options.cpp  cli_options.hpp  cli_runner.cpp  cli_runner.hpp  device_discovery.cpp  host_core_real.cpp  host_core_stub.cpp  ipc_main.cpp  json_writer.cpp  json_writer.hpp  main.cpp  sweep_result.cpp  sweep_result.hpp
scripts/vna/cpp/src/app/: librevna_cli_main.cpp  librevna_ipc_main.cpp
scripts/vna/cpp/src/gui/: main.cpp  resources.qrc
scripts/vna/cpp/src/gui/ui/i18n/: en.json  zh_Hans.json  zh_Hant.json
scripts/vna/cpp/src/gui/ui/theme/: DesignTokens.hpp  ThemeLoader.cpp  ThemeLoader.hpp  theme.qss
scripts/vna/cpp/src/gui/ui/views/: BottomPanel.cpp  BottomPanel.hpp  MainView.cpp  MainView.hpp  Sidebar.cpp  Sidebar.hpp
scripts/vna/cpp/src/gui/ui/widgets/: ColorPopover.cpp  ColorPopover.hpp  PlotView.cpp  PlotView.hpp  SeriesCheck.cpp  SeriesCheck.hpp
scripts/vna/cpp/src/headless/: librevna_headless.cpp  librevna_headless.h
scripts/vna/src/librevna/: __init__.py  output_config.py
scripts/vna/src/librevna/calibration/: __init__.py  solt12.py
scripts/vna/src/librevna/device/: __init__.py  headless_cli.py
